# trackone

./: .bandit.yaml  .cliff.toml  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.ots.yml  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/: dependabot.yml
adr/: ADR-001-primitives-x25519-hkdf-xchacha.md  ADR-002-telemetry-framing-and-replay-policy.md  ADR-003-merkle-canonicalization-and-ots-anchoring.md  ADR-004-framed-ingest-stub.md  ADR-005-pynacl-migration.md  ADR-006-forward-only-schema-and-salt8.md  ADR-007-ots-ci-verification-and-bitcoin-headers.md  ADR-008-m4-completion-ots-workflow.md  ADR-009-bandit-remediation.md  ADR-010-test-suite-refactor-structure-naming.md  ADR-011-benchmarking-strategy.md  ADR-012-parquet-export-and-columnar-storage.md  ADR-013-python-version-support-policy.md  ADR-014-stationary-ots-calendar.md  ADR-015-parallel-anchoring-ots-rfc3161-tsa.md  ADR-016-changelog-policy-git-cliff.md  ADR-017-rust-core-and-pyo3-integration.md  ADR-018-cryptographic-randomness-and-nonce-policy.md  ADR-019-rust-gateway-chain-of-trust.md  ADR-020-stationary-ots-calendar-followup.md  ADR-021-safety-net-ots-pipeline-verification.md  ADR-022-first-party-stationary-ots-calendar-service.md  ADR-023-ots-vs-git-integrity.md  ADR-024-anti-replay-and-ots-backed-ledger.md  ADR-025-adaptive-uplink-cadence-over-lora.md  ADR-026-ota-firmware-updates-over-lora.md  ADR-027-sensorthings-shtc3-representation.md  ADR-028-sensorthings-projection-mapping.md  ADR-029-env-daily-summaries-and-usecases.md  ADR-030-envfacts-sensorthings-and-duty-cycled-anchoring.md  ADR-031-key-analysis-of-spatialite.md  ADR-032-informational-rfc-verifiable-telemetry-ledger.md  ADR-033-virtual-fleet-verifiable-telemetry.md  ADR-034-serialization-boundaries-transport-vs-commitments.md  ADR-035-workspace-versioning-and-release-visibility.md  ADR-036-post-quantum-kem.md  ADR-037-signature-roles-and-verification-boundaries.md  ADR-038-surface-tooling-and-abi3-wheel-strategy.md  ADR-039-cbor-first-commitment-profile-and-artifact-authority.md  ADR-040-commitment-test-vectors-and-conformance-gates.md  (+25 more)
apps/trackone-evidence/: CHANGELOG.md  Cargo.toml  README.md
apps/trackone-evidence/src/: bundle.rs  error.rs  export.rs  git_ops.rs  lib.rs  main.rs  manifest.rs  policy.rs  v2.rs  verify.rs
apps/trackone-evidence/tests/: detached_negative_fixtures.rs  rust_native_evidence.rs  v2_vector_bundles.rs
apps/trackone-gateway-svc/: CHANGELOG.md  Cargo.toml  README.md
apps/trackone-gateway-svc/deploy/: Dockerfile
apps/trackone-gateway-svc/deploy/helm/trackone/: Chart.yaml  README.md  values-published.yaml  values.schema.json  values.yaml
apps/trackone-gateway-svc/deploy/helm/trackone/templates/: gateway-configmap.yaml  gateway-deployment.yaml  gateway-secret.yaml  gateway-service.yaml  jobs-pod-fw-build.yaml  postgres-secret.yaml  postgres-service.yaml
apps/trackone-gateway-svc/deploy/k8s/local/: README.md
apps/trackone-gateway-svc/deploy/k8s/local/base/: kustomization.yaml
apps/trackone-gateway-svc/deploy/k8s/local/base/gateway/: gateway-deployment.yaml  gateway-service.yaml
apps/trackone-gateway-svc/deploy/k8s/local/base/jobs/: core-build-job.yaml
apps/trackone-gateway-svc/deploy/k8s/local/base/ots/: calendar-deployment.yaml
apps/trackone-gateway-svc/deploy/k8s/local/base/postgres/: postgres-secret.yaml  postgres-statefulset.yaml
apps/trackone-gateway-svc/deploy/k8s/local/overlays/local/: kustomization.yaml
apps/trackone-gateway-svc/deploy/k8s/local/overlays/local/patches/: gateway-nodeport.yaml  ots-calendar-imagepull-ifnotpresent.yaml  ots-calendar-pvc.yaml
apps/trackone-gateway-svc/migrations/: 0001_v2_ledger.sql
apps/trackone-gateway-svc/src/: lib.rs  main.rs  postgres.rs  producer.rs  service.rs  tsa.rs
bindings/trackone-python/: CHANGELOG.md  Cargo.toml  README.md
bindings/trackone-python/src/: crypto.rs  ledger.rs  lib.rs  merkle.rs  ots.rs  radio.rs
bindings/trackone-python/src/sensorthings/: python.rs
crates/trackone-constants/: CHANGELOG.md  Cargo.toml  README.md
crates/trackone-constants/src/: lib.rs
crates/trackone-core/: CHANGELOG.md  Cargo.toml  README.md
crates/trackone-core/src/: cbor.rs  crypto.rs  frame.rs  identity_input.rs  lib.rs  merkle.rs  provisioning.rs  types.rs
crates/trackone-evidence/: CHANGELOG.md  Cargo.toml  README.md
crates/trackone-evidence/src/: lib.rs  main.rs  v2.rs
crates/trackone-evidence/tests/: detached_negative_fixtures.rs  rust_native_evidence.rs  v2_vector_bundles.rs
crates/trackone-gateway/: CHANGELOG.md  Cargo.toml  README.md
crates/trackone-gateway/migrations/: 0001_v2_ledger.sql
crates/trackone-gateway/src/: crypto.rs  ledger.rs  lib.rs  merkle.rs  merkle_policy.rs  ots.rs  radio.rs  v2_postgres.rs  v2_producer.rs  v2_service.rs  v2_tsa.rs
crates/trackone-gateway/src/sensorthings/: adapter.rs  ids.rs  mapping.rs  mod.rs  python.rs  timefmt.rs  validate.rs
crates/trackone-ingest/: CHANGELOG.md  Cargo.toml  README.md
crates/trackone-ingest/src/: aad.rs  admission.rs  fixture.rs  frame.rs  lib.rs  nonce.rs  profile.rs  replay.rs  tests.rs
crates/trackone-ledger/: CHANGELOG.md  Cargo.toml  README.md
crates/trackone-ledger/src/: c_cbor.rs  c_json.rs  lib.rs  merkle.rs  types.rs  v2.rs
crates/trackone-ledger/tests/: cddl_commitment_family.rs  vector_corpus.rs
crates/trackone-ots/: CHANGELOG.md  Cargo.toml  README.md
crates/trackone-ots/src/: lib.rs
crates/trackone-pod-fw/: CHANGELOG.md  Cargo.toml  README.md
crates/trackone-pod-fw/src/: hal.rs  lib.rs  nonce.rs  pod.rs  power.rs  stress.rs  watchdog.rs
crates/trackone-rfc3161/: CHANGELOG.md  Cargo.toml  README.md
crates/trackone-rfc3161/src/: lib.rs
crates/trackone-rfc3161/tests/fixtures/: tsa-root.pem
crates/trackone-sensorthings/: CHANGELOG.md  Cargo.toml  README.md
crates/trackone-sensorthings/src/: lib.rs  mapping.rs  types.rs  validate.rs
docs/: VERSIONING.md  bench-network.md  evidence-bundle-roundtrip.md  (+2 more)
(+424 files in other folders)
