[workspace]
resolver = "2"
members = [
    "crates/trackone-core",
    "crates/trackone-gateway",
    "crates/trackone-pod-fw",
    "crates/trackone-constants",
    "crates/trackone-ledger",
]

[workspace.package]
version = "0.1.0-alpha.12"
edition = "2024"
rust-version = "1.88"
publish = true
license = "MIT"
authors = ["BILAL <elkhatabibilal@gmail.com>"]
repository = "https://github.com/bilalobe/trackone"

[workspace.dependencies]
   pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py312"] }

   # Common third-party deps (centralize versions)
   serde = { version = "1.0.228", default-features = false, features = ["derive"] }
   serde_json = "1.0.149"
   base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
   chacha20poly1305 = "0.10.1"
   sha2 = { version = "0.11.0", default-features = false }

   heapless = { version = "0.9.2", default-features = false, features = ["serde"] }
   postcard = { version = "1.1.3", default-features = false }
   serde_repr = "0.1.20"
   serde-big-array = "0.5.1"
   zeroize = { version = "1.8.2", default-features = false, features = ["derive"] }
   ciborium = "0.2.2"

   # Dev/test helpers used by core/ledger crates
   serde_json_canonicalizer = "0.3.2"

   # Internal crates (workspace path + pinned version for publish compatibility)
   trackone-core = { path = "crates/trackone-core", version = "0.1.0-alpha.12", default-features = false }
   trackone-ledger = { path = "crates/trackone-ledger", version = "0.1.0-alpha.12" }
   trackone-constants = { path = "crates/trackone-constants", version = "0.1.0-alpha.12" }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
