[workspace]
resolver = "3"
members = [
    "crates/trackone-core",
    "crates/trackone-evidence",
    "crates/trackone-gateway",
    "crates/trackone-ingest",
    "crates/trackone-pod-fw",
    "crates/trackone-constants",
    "crates/trackone-ledger",
    "crates/trackone-sensorthings",
]

[workspace.package]
version = "0.1.0-beta.2"
edition = "2024"
rust-version = "1.93"
publish = true
license = "MIT"
authors = ["BILAL <elkhatabibilal@gmail.com>"]
repository = "https://github.com/bilalobe/trackone"

[workspace.dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py312"] }

# Common third-party deps (centralize versions)
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.150"
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
chacha20poly1305 = "0.11.0"
sha2 = { version = "0.11.0", default-features = false }
heapless = { version = "0.9.3", default-features = false, features = ["serde"] }
postcard = { version = "1.1.3", default-features = false }
serde_repr = "0.1.20"
zeroize = { version = "1.9.0", default-features = false, features = ["derive"] }
serde_json_canonicalizer = "0.3.2"

# Internal crates (workspace path + pinned version for publish compatibility)
trackone-core = { path = "crates/trackone-core", version = "0.1.0-beta.2", default-features = false }
trackone-ingest = { path = "crates/trackone-ingest", version = "0.1.0-beta.2", default-features = false }
trackone-ledger = { path = "crates/trackone-ledger", version = "0.1.0-beta.2" }
trackone-constants = { path = "crates/trackone-constants", version = "0.1.0-beta.2" }
trackone-sensorthings = { path = "crates/trackone-sensorthings", version = "0.1.0-beta.2" }
trackone-gateway = { path = "crates/trackone-gateway", version = "0.1.0-beta.2", default-features = false }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
