[project]
name = "trackone"
version = "0.1.0a10"
description = "Ultra-Low-Power, Verifiable Telemetry (Barnacle Sentinel)"
authors = [{ name = "BILAL", email = "elkhatabibilal@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pynacl==1.6.2",
    "jsonschema>=4.26.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
# Testing dependencies (pytest + property testing)
test = [
    "hypothesis>=6.150.0",
    "opentimestamps-client>=0.7.2",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.1.0",
]

# Lint/format tooling
lint = [
    "ruff>=0.14.13",
    "black>=26.1.0",
    "mdformat==1.0.0",
    "mdformat-gfm==1.0.0",
    "mdformat-ruff==0.1.3",
]

# Type checking tooling
# Note: mypy checks modules that import requests; include it here.
type = [
    "mypy>=1.19.1",
    "types-jsonschema",
    "types-requests",
    "requests>=2.32.3",
]

# Security tooling
security = [
    "bandit>=1.9.2",
    "pip-audit>=2.7.3",
]

# Runtime deps for optional anchoring / HTTP interactions
anchoring = [
    "requests>=2.32.3",
]

ci = [
    "tox>=4.0",
    "tox-uv>=1.16.0",
]

[dependency-groups]
dev = [
    "uv==0.10.9",
    "time-machine>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/bilalobe/trackone"
Repository = "https://github.com/bilalobe/trackone"
Documentation = "https://github.com/bilalobe/trackone/blob/main/README.md"
Changelog = "https://github.com/bilalobe/trackone/blob/main/CHANGELOG.md"

[project.scripts]
# Example CLI entry point:
# trackone-cli = "trackone.cli:main"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

# Maturin build configuration
[tool.maturin]
# PyO3 bindings for Rust cdylib (gateway crate in workspace)
manifest-path = "crates/trackone-gateway/Cargo.toml"
bindings = "pyo3"
#
# We ship a small Python package `trackone_core/` alongside the native extension.
# The native module lives at `trackone_core._native` so `python-source` can be set
# without requiring a top-level `trackone_core.py` (which would shadow the extension).
python-source = "."
module-name = "trackone_core._native"
include = [
    "trackone_core/**/*.py",
    "LICENSE",
    "README.md",
]
exclude = [
    "trackone_core/**/__pycache__",
    "trackone_core/**/*.pyc",
]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "unit: unit tests (fast, no external I/O)",
    "integration: integration tests (I/O or multiple modules)",
    "e2e: end-to-end tests (slow, full pipeline)",
    "crypto: cryptographic primitives and edge cases",
    "ots: OpenTimestamps related tests",
    "slow: slow-running tests (excluded by default)",
    "real_ots: uses real OpenTimestamps client (very slow, opt-in)",
    "benchmark: performance benchmarks (requires pytest-benchmark)",
]
# Treat warnings as errors, but allow some known safe warnings
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",  # For async cleanup issues
    "ignore::ResourceWarning",  # File handle cleanup in tests
    "ignore::Warning:pytest_benchmark\\..*",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Coverage configuration
[tool.coverage.run]
branch = true
source = ["scripts"]
omit = [
    "tests/*",
    "scripts/dev/*",
    "*/__pycache__/*",
    "*/test_*.py",
]
# parallel = true is handled automatically by pytest-cov with pytest-xdist
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_empty = true
skip_covered = false
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",  # Alternative main guard
    "@abstract",
    "raise AssertionError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

#fail_under = 85

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# Black configuration for Track1 project
[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.pytest_cache
  | __pycache__
  | build
  | dist
  | out
)/
'''

# Ruff configuration for Track1 project
# https://docs.astral.sh/ruff/
[tool.ruff]
# Exclude common directories
exclude = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "*.egg-info",
    ".venv",
    "venv",
    "build",
    "dist",
    "out",
]

[tool.ruff.lint]
# Select a focused set of rules; expand as needed
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
]

ignore = [
    "E501", # line too long (black handles this)
    "B008", # do not perform function call in argument defaults
]

# Allow autofix for all enabled rules (when running with --fix)
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files
"tests/**" = ["E402", "F821"]  # Allow module level imports not at top in test files, allow undefined names (fixtures)

[tool.ruff.format]
# Use black-compatible formatting
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

# Mypy configuration (tighter checks)
[tool.mypy]
python_version = "3.12"
strict = true
exclude = [
    "tests/",
    "scripts/dev/",
]

# Ignore missing imports for libraries without type stubs
[[tool.mypy.overrides]]
module = ["nacl.*", "trackone_core"]
ignore_missing_imports = true
