[package]
name = "trackone-gateway-svc"
description = "Deployable HTTP and PostgreSQL runtime for TrackOne v2 admission"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
axum.workspace = true
postgres.workspace = true
serde_json.workspace = true
tokio.workspace = true
trackone-ledger.workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "trackone-v2-gateway"
path = "src/main.rs"
