[package]
name = "trackone-constants"
description = "Shared constants for TrackOne crates"
version.workspace = true
edition.workspace = true
publish = true # Override workspace default (publish=false) so this crate can be packaged/published.
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
# intentionally empty
