[package]
name = "trackone-core"
description = "Core no_std-capable cryptographic and serialization primitives for TrackOne"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[features]
# Default to std for host/gateway development and testing.
#
# IMPORTANT: CI avoids `--all-features` because we keep security-gated features
# (e.g., `dummy-aead`) from being accidentally enabled in production-style builds.
default = ["std"]

# Enable use of the Rust standard library.
std = ["dep:ciborium"]

# Gateway-only helpers (e.g., Merkle tree) that may assume std and
# are not intended for very small MCUs.
# Currently this only pulls in sha2, but we keep it as a separate
# feature so gateway crates can opt in explicitly.
gateway = ["sha2", "std"]

# Enable the built-in dummy AEAD implementation used for tests and
# examples. Downstream users targeting production firmware should
# disable this feature.
dummy-aead = []

# Explicit safety gate: downstream crates can enable this to ensure a build
# fails if `dummy-aead` is also present.
deny-dummy-aead = []

# Semantic marker for production builds. Downstream crates may use this
# to enable stricter compile-time checks.
production = []

[dependencies]
# Core data-structure support for no_std environments.
heapless.workspace = true

# Serialization support
postcard.workspace = true

# Serde for (de)serializing core types.
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }

# Serde representation helper
serde_repr.workspace = true

# Support for large array (de)serialization in no_std contexts.
serde-big-array.workspace = true

# Hashing for Merkle trees and other gateway-only uses.
sha2 = { workspace = true, default-features = false, optional = true }

# Zeroize secret key material on drop.
zeroize = { workspace = true, default-features = false, features = ["derive"] }

# Workspace constants dependency
trackone-constants.workspace = true

# CBOR support
ciborium = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
# RFC 8785 JSON Canonicalization Scheme (JCS) implementation used in tests/benchmarks.
serde_json_canonicalizer.workspace = true

[lib]
# Keep doctests disabled for now until public API and examples stabilize.
doctest = false
