[package]
name = "trackone-core"
description = "Core no_std-capable cryptographic and serialization primitives for TrackOne"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[features]
# Default to std for host/gateway development and testing.
#
# IMPORTANT: CI avoids `--all-features` because we keep security-gated features
# (e.g., `dummy-aead`) from being accidentally enabled in production-style builds.
default = ["std"]

# Enable use of the Rust standard library.
std = []

# Opt-in postcard compatibility checks for shared core types. Framed postcard
# ownership still lives in trackone-ingest.
postcard = ["dep:postcard"]

# Enable the built-in dummy AEAD implementation used for tests and
# examples. Downstream users targeting production firmware should
# disable this feature.
dummy-aead = []

# Explicit safety gate: downstream crates can enable this to ensure a build
# fails if `dummy-aead` is also present.
deny-dummy-aead = []

# Semantic marker for production builds. Downstream crates may use this
# to enable stricter compile-time checks.
production = []

[dependencies]
# Core data-structure support for no_std environments.
heapless.workspace = true

# Serde for (de)serializing core types.
serde.workspace = true

# Serde representation helper
serde_repr.workspace = true

# Zeroize secret key material on drop.
zeroize.workspace = true

# Workspace constants dependency
trackone-constants.workspace = true

# Optional postcard support for opt-in compatibility tests/helpers.
postcard = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
# RFC 8785 JSON Canonicalization Scheme (JCS) implementation used in tests/benchmarks.
serde_json_canonicalizer.workspace = true

[lib]
# Keep doctests disabled for now until public API and examples stabilize.
doctest = false
