[package]
name = "trackone-gateway"
description = "Gateway-side Rust crate exposing PyO3 bindings for Python"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
name = "trackone"
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
trackone-constants.workspace = true
trackone-ledger.workspace = true
trackone-core.workspace = true
trackone-ingest = { workspace = true, features = ["std", "xchacha"] }
pyo3.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64.workspace = true

[dev-dependencies]
