[package]
name = "trackone-gateway"
description = "Gateway-side Rust crate; pure Rust core + optional PyO3 Python bindings ('python' feature)"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
name = "trackone"
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = ["python"]
python = ["dep:pyo3", "dep:base64"]

[dependencies]
trackone-constants.workspace = true
trackone-ledger.workspace = true
trackone-core.workspace = true
trackone-ingest = { workspace = true, features = ["std", "xchacha"] }
trackone-sensorthings.workspace = true
pyo3 = { workspace = true, optional = true }
serde_json.workspace = true
base64 = { workspace = true, optional = true }
