[package]
name = "trackone-gateway"
description = "Gateway-side Rust crate; pure Rust core with legacy optional PyO3 bindings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
name = "trackone"
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = []
python = ["dep:pyo3", "dep:base64"]
postgres-store = ["dep:postgres"]

[dependencies]
trackone-constants.workspace = true
trackone-ledger.workspace = true
trackone-core.workspace = true
trackone-ingest = { workspace = true, features = ["std", "xchacha"] }
trackone-sensorthings.workspace = true
pyo3 = { workspace = true, optional = true }
serde_json.workspace = true
base64 = { workspace = true, optional = true }
postgres = { workspace = true, optional = true }
