[package]
name = "trackone-ingest"
description = "Rust-native framed telemetry emission and gateway admission profiles for TrackOne"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[features]
# Host builds get the concrete XChaCha framed admission/fixture helpers.
default = ["std", "xchacha"]
std = ["trackone-core/std"]
xchacha = ["dep:chacha20poly1305", "std"]

[dependencies]
chacha20poly1305 = { workspace = true, optional = true }
heapless.workspace = true
postcard.workspace = true
serde = { workspace = true, default-features = false, features = ["derive"] }
trackone-constants.workspace = true
trackone-core.workspace = true

[dev-dependencies]
trackone-core = { workspace = true, features = ["dummy-aead"] }

[lib]
doctest = false
