[package]
name = "trackone-ledger"
description = "Canonical JSON and Merkle-policy helpers for TrackOne ledger artifacts"
version.workspace = true
edition.workspace = true
publish = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
serde_json = "1"
