[package]
name = "trackone-ledger"
description = "Canonical JSON and Merkle-policy helpers for TrackOne ledger artifacts"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
