[package]
name = "trackone-ots"
description = "Reusable OpenTimestamps proof and metadata verification for TrackOne"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
serde_json.workspace = true
trackone-constants.workspace = true
trackone-ledger.workspace = true

[lib]
path = "src/lib.rs"
doctest = false
