[package]
name = "trackone-pod-fw"
description = "Pod firmware-side helpers and utilities for TrackOne"
version.workspace = true
edition.workspace = true
publish = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
trackone-core = { version = "0.1.0-alpha.3", path = "../trackone-core", default-features = false }

[dev-dependencies]
trackone-core = { version = "0.1.0-alpha.3", path = "../trackone-core", default-features = false, features = ["dummy-aead"] }

[features]
default = ["std"]
std = []
mock = []
mock-log = ["mock", "std"]

# Future: when targeting embedded platforms
# [profile.release]
# lto = true
# codegen-units = 1
# opt-level = "z"
# panic = "abort"
# overflow-checks = false
