[package]
name = "trackone-pod-fw"
description = "Pod firmware-side helpers and utilities for TrackOne"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
trackone-core.workspace = true

[dev-dependencies]
trackone-core = { workspace = true, features = ["dummy-aead"] }

[features]
default = ["std"]
std = []
mock = []
mock-log = ["mock", "std"]

# Future: when targeting embedded platforms
# [profile.release]
# lto = true
# codegen-units = 1
# opt-level = "z"
# panic = "abort"
# overflow-checks = false
