[package]
name = "trackone-sensorthings"
description = "Deterministic read-only SensorThings projection helpers for TrackOne"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
serde_json.workspace = true
trackone-core.workspace = true
trackone-ledger.workspace = true
